--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,6 +12,9 @@
         <input type="text" id="add-name" placeholder="New to-do">
         <input type="submit" value="Add">
     </form>
+    <p>
+        Test
+    </p>
 
     <div id="editForm">
         <h3>Edit</h3>
